kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
